This file describes changes in recent versions of SLURM. It primarily
documents those changes that are of interest to users and admins.

* Changes in SLURM 1.2.27
=========================
 -- Record job eligible time in accounting database (for jobacct/gold only).
 -- Prevent user root from executing a job step within a job allocation 
    belonging to another user.
 -- fixed limiting issue for strings larger than 4096 in xstrfmtcat
 -- Added patch from Jerry Smith for qstat -a output
 -- Fixed looking at the correct perl path for Slurm.pm in torque wrappers.

* Changes in SLURM 1.2.26
=========================
 -- Correct number of sockets/cores/threads reported by slurmd (from
    Par Andersson, National Supercomputer Centre, Sweden).
 -- Update libpmi linking so that libslurm is not required for PMI use
    (from Steven McDougal, SiCortex).
 -- In srun and sbatch, do not check the PATH env var if an absolute pathname 
    of the program is specified (previously reported an error if no PATH).
 -- Correct output of "sinfo -o %C" (CPU counts by node state).
 -- Treat attempt to submit a batch job against an existing resource allocation
    as an error if sched/wiki2 is configured (Moab).

* Changes in SLURM 1.2.25
=========================
 -- Bug fix for setting exit code in accounting for batch script.
 -- Add salloc option, --no-shell (for LSF).
 -- Added new options for sacct output
 -- mvapich: Ensure MPIRUN_ID is unique for all job steps within a job.
    (Fixes crashes when running multiple job steps within a job on one node)
 -- Prevent "scontrol show job" from failing with buffer overflow when a job 
    has a very long Comment field.
 -- Make certain that a job step is purged when a job has been completed.
    Previous versions could have the job step persist if an allocated node
    went DOWN and the slurmctld restarted.
 -- Fix bug in sbcast that can cause communication problems for large files.