@@ -493,13 +493,6 @@ static char *	_get_job_state(struct job_record *job_ptr)
 	char *state_str;
 	static char return_msg[128];
 
-	if (base_state == JOB_PENDING)
-		return "Idle";
-	if (base_state == JOB_RUNNING)
-		return "Running";
-	if (base_state == JOB_SUSPENDED)
-		return "Suspended";
-
 	if (state & JOB_COMPLETING) {
 		/* Give configured KillWait+10 for job
 		 * to clear out, then then consider job 
@@ -510,6 +503,13 @@ static char *	_get_job_state(struct job_record *job_ptr)
 		if (age < (kill_wait+10))
 			return "Running";
 	}
+
+	if (base_state == JOB_PENDING)
+		return "Idle";
+	if (base_state == JOB_RUNNING)
+		return "Running";
+	if (base_state == JOB_SUSPENDED)
+		return "Suspended";
 
 	if ((base_state == JOB_COMPLETE) || (base_state == JOB_FAILED))
 		state_str = "Completed";
